Fix racquet card icon alignment

--- a/app/javascript/packs/stylesheets/_custom.scss
+++ b/app/javascript/packs/stylesheets/_custom.scss
@@ -84,11 +84,11 @@ ul {
   }
 
   .fa-weight-hanging {
-    margin: 0 2px;
+    margin: 0 4px;
   }
 
   .fa-sticky-note {
-    margin: 0 3px;
+    margin: 0 6px;
   }
 
   li {
