--- a/app/javascript/packs/stylesheets/_responsive.scss
+++ b/app/javascript/packs/stylesheets/_responsive.scss
@@ -31,6 +31,14 @@
     .racquet-brand {
       font-size: 1.1rem;
     }
+  
+    .fa-weight-hanging {
+      margin: 0 2px;
+    }
+
+    .fa-sticky-note {
+      margin: 0 3px;
+    }
 
     li {
       font-size: 1rem;
@@ -64,5 +72,3 @@
   }
 }
 
-@media (min-width: 1920px) {
-}
